# MusicLibrary

./: README.md  README.rst  ca.edestcroix.MusicLibary.json  com.github.edestcroix.RecordBox.json  meson.build  pypy-dependencies.json
.flatpak-builder/cache/refs/heads/x86_64-ca.edestcroix.MusicLibary.json/: init
.flatpak-builder/checksums/: x86_64-ca.edestcroix.MusicLibary.json
.github/workflows/: flatpak.yml
data/: album_view.ui  ca.edestcroix.MusicLibary.appdata.xml.in  ca.edestcroix.MusicLibary.desktop.in  ca.edestcroix.MusicLibary.gschema.xml  com.github.edestcroix.RecordBox.Devel.desktop.in  com.github.edestcroix.RecordBox.appdata.xml.in  com.github.edestcroix.RecordBox.desktop.in  com.github.edestcroix.RecordBox.gschema.xml  library.ui  main_view.ui  meson.build  musiclibrary.gresource.xml  play_queue.ui  player_controls.ui  preferences.ui  recordbox.gresource.xml  style.css  window.ui
data/gtk/: help-overlay.ui
data/icons/: meson.build
data/lists/: album_row.ui  artist_row.ui  queue_row.ui
po/: POTFILES  meson.build
src/: album_list.py  album_view.py  album_view.ui  items.py  library.py  library_list.py  library_lists.py  main.py  main_view.py  meson.build  monitor.py  mpris.py  music_types.py  musicdb.py  musiclibrary.gresource.xml  musiclibrary.in  musicrow.py  mutagen_test.py  parser.py  play_queue.py  player.py  player_controls.py  preferences.py  recordbox.in  style.css  window.py  window.ui
